--- a/Reto1/src/main/resources/static/assets/css/style.css
+++ b/Reto1/src/main/resources/static/assets/css/style.css
@@ -1,5 +1,5 @@
 .jumbotron{
-    background: rgb(173, 172, 184);
+    background: rgb(119, 177, 133);
 
 }
 
@@ -8,3 +8,13 @@
 h1, h3, label{
     color: white;
 }
+
+#centrar{
+    background-color: aliceblue;
+    border: 5px 5px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
